# polygraphs

./: .gitignore  LICENSE  README.md  environment.yml  figure-two.ipynb  gen-explorations-basic.sh  graphs.ipynb  package-lock.json  package.json  polarization.ipynb  pyproject.toml  requirements-discovery.txt  requirements.txt  run-array.script  run.py  setup.py  test-seed.yml  zollman-effect.ipynb  zolman-effect.ipynb
.github/workflows/: deploy.yml
configs/: explorables-polarization.json  explorables.json  polarization-cycle.yml  polarization-star.yml  polarization.yml  test.yaml  zollman-effect.yaml
configs/zollman-effect/: exploration copy.json  exploration-again.json  exploration-complete-epsilon.json  exploration-complete-size.json  exploration-complete-trials.json  exploration-complete.json  exploration-new-zoom-barabasi-albert.json  exploration.json  (+16 more)
data/: README.md
docs/: index.md
examples/: bayes.ipynb  demo.ipynb  figure-two.ipynb  graphs.ipynb  group-beliefs.ipynb  large-nets.ipynb  pgperf.ipynb  polarization.ipynb  polygraphs-to-stata.ipynb  random-graphs.ipynb  result-analysis.ipynb  result-analysis2.ipynb  sparsity.ipynb  test.ipynb  theoretical-analysis.ipynb  unreliable-nets.ipynb  zollman-effect.ipynb
polygraphs/: __init__.py  cli.py  datasets.py  graphs.py  hyperparameters.py  init.py  logger.py  logging.yaml  metadata.py  monitors.py  ops.py  run.py  timer.py  visualisations.py
scripts/: animate.py  delete-jpeg.ipynb  find-exploration.py  gather.ipynb  gather.py  job-array-generator.py  real-time-sparsity.py  sixdegreesoffrancisbacon.ipynb
(+63 files in other folders)
