[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polygraphs"
version = "0.0.22-alpha"
authors = [
    {name="Alexandros Koliousis", email="ak@akoliousis.com"},
    {name="Amil Mohanan", email="amil@mohanan.net"}
]
license = {text = "MIT License"}
description = "Philosophical simulations on networks"
readme = "README.md"
keywords = ["philosophy", "epistemology", "simulation"]
requires-python = ">=3.8"
dependencies = [
    "PyYaml",
    "pandas",
    "numpy",
    "h5py",
    "matplotlib",
    "networkx",
    "six",
    "torch",
    "dgl"
]

[project.urls]
Repository = "https://github.com/alexandroskoliousis/polygraphs"
Documentation = "https://akoliousis.com/polygraphs/"

[project.scripts]
polygraphs = "polygraphs.run:run"
